--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [AniBatch]
-#Supported sites are gogoanime and zoro
+#Supported sites are gogoanime
 site = gogoanime
 #Leave empty for current directory
 path = 
